--- a/css/main.css
+++ b/css/main.css
@@ -170,7 +170,7 @@ textarea {
 }
 
 .inputContainer .input:focus{
-  border: 2px solid #000000;
+  border-color: #6675df !important;
 }
 
 .inputContainer .input:not(:placeholder-shown)+ .label {
@@ -182,6 +182,7 @@ textarea {
 }
 
 textarea:focus,
+
 input:focus {
   border-color: transparent !important;
 }
