--- a/css/homepage.css
+++ b/css/homepage.css
@@ -259,6 +259,42 @@
     font-size: small;
 
   }
+
+  .widgets__widgetContainer .follow_friends{
+    display: flex;
+  }
+
+  .widgets__widgetContainer .follow_friends .friends_dp img{
+    height: 40px;
+    border-radius: 50%;
+  }
+
+  .widgets__widgetContainer .follow_friends .post__headerText h3{
+    margin-bottom: 0px !important;
+  }
+
+  .widgets__widgetContainer .follow_friends .username_follow{
+    display: flex;
+    margin-left: 10px;
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  .widgets__widgetContainer .follow_friends .follow{
+    background-color: #6675df;
+    border: none !important;
+    width: 100% !important;
+    height: 30px;
+    border-radius: 30px;
+    color: white;
+    font-size: 15px;
+    /* font-weight: 700; */
+  }
+
+  .follow_button{
+    width: 35%;
+  }
+
   .widgets__widgetContainer h2 {
     font-size: 18px;
     font-weight: 800;
