--- a/css/homepage.css
+++ b/css/homepage.css
@@ -61,6 +61,10 @@
     box-shadow: rgb(149 157 165 / 20%) 0px 6px 24px;
     cursor: pointer;
   }
+
+  .sidebar__tweet:hover{
+    background-color: #4657d3;
+  }
   
   body {
     display: flex;
@@ -162,12 +166,16 @@
     border: none;
     color: white;
     font-weight: 900;
-  
+    cursor: pointer;
     border-radius: 30px;
     width: 80px;
     height: 40px;
     margin-top: 20px;
     margin-left: auto;
+  }
+
+  .tweetBox__tweetButton:hover{
+    background-color: #4657d3;
   }
   
   /* post */
@@ -297,6 +305,10 @@
 
   .follow_button{
     width: 30%;
+  }
+
+  .follow_button .follow:hover{
+    background-color: #4657d3;
   }
 
   .widgets__widgetContainer h2 {
