--- a/css/account.css
+++ b/css/account.css
@@ -1,75 +1,78 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    /* font-family: 'Source Sans Pro', sans-serif; */
-  }
-  
-  body {
-    --twitter-color: #50b7f5;
-    --twitter-background: #e6ecf0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /* font-family: 'Source Sans Pro', sans-serif; */
+}
 
-  }
+body {
+  --twitter-color: #50b7f5;
+  --twitter-background: #e6ecf0;
+}
 
-  .feed .feed__header h2 {
-    text-align: left;
-  }
+.feed {
+  max-width: none;
+}
 
-  .feed .cover_photo{
-    background-image: url(../images/coverphoto/saaki.jpg);
-    height: 290px;
-    /* height: 100vh; */
-    background-repeat: no-repeat;
-    background-position: center;
-  }
+.feed .feed__header h2 {
+  text-align: left;
+}
 
-  .feed .post__headerText{
-    margin-left: 20px;
-  }
+.feed .cover_photo {
+  background-image: url(../images/coverphoto/saaki.jpg);
+  height: 240px;
+  /* height: 100vh; */
+  background-repeat: no-repeat;
+  background-position: center;
+}
 
-  .dp{
-    display: flex;
-    justify-content: space-between;
-  }
+.feed .post__headerText {
+  margin-left: 20px;
+}
 
-  .dp img{
-    border-radius: 50%;
-    margin-left: 20px;
-    margin-top: 20px;
-  }
-  .dp .edit_profile{
-    width: 20%;
-    height: fit-content;
-    margin: 50px 20px 50px 0px;
-    text-align: center;
-    border: 1px solid black;
-    border-radius: 20px;
-  }
+.dp {
+  display: flex;
+  justify-content: space-between;
+}
 
-  .dp .edit_profile:hover{
-    background-color: rgba(228, 227, 227, 0.826);
-  }
+.dp img {
+  border-radius: 50%;
+  margin-left: 20px;
+  margin-top: -70px;
+  margin-bottom: 50px;
+}
+.dp .edit_profile {
+  width: 20%;
+  height: fit-content;
+  margin: 50px 20px 50px 0px;
+  text-align: center;
+  border: 1px solid black;
+  border-radius: 20px;
+}
 
-  .edit_profile a{
-    text-decoration: none;
-    color: inherit;
+.dp .edit_profile:hover {
+  background-color: rgba(228, 227, 227, 0.826);
+}
 
-  } 
+.edit_profile a {
+  text-decoration: none;
+  color: inherit;
+}
 
-  .profile_name h3{
-    margin-bottom: -5px !important;
-    font-size: 25px;
-  }
+.profile_name h3 {
+  margin-bottom: -5px !important;
+  font-size: 25px;
+}
 
-  .profile_name .post__headerSpecial{
-    font-size: 15px;
-  }
+.profile_name .post__headerSpecial {
+  font-size: 15px;
+}
 
-  .details{
-    margin-left: 20px;
-    margin-top: 20px;
-  }
-   
-  .post__body .post__headerText{
-    margin-left: 0px !important;
-  }
+.details {
+  margin-left: 20px;
+  margin-top: 20px;
+}
+
+.post__body .post__headerText {
+  margin-left: 0px !important;
+}
